[project]
name = "tieba-archive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aioitertools>=0.13.0",
    "aiotieba>=4.7.0",
    "lxml>=6.0.2",
    "psycopg[binary]>=3.2.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sqlmodel>=0.0.37",
]
